Fix overlapping scrollbars in Chrome

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,55 +70,59 @@ a:hover, a:focus, a:active {
   transform: translate(0, 0)
 }
 
-.modal.full-screen .modal-dialog {
-  max-width: none;
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
+.modal.full-screen {
+  background: #131315;
 
-  .modal-header {
-    display: block;
-    text-align: center;
-    padding: 0;
-    margin-bottom: 30px;
-    border: 0;
-
-    button.close {
-      display: inline-block;
-      float: none;
-      text-shadow: none;
-      border: 1px solid rgb(50, 43, 34);
-      border-top: 0;
-      padding: 25px;
-      margin-top: 0;
-    }
-  }
-
-  .modal-content {
+  .modal-dialog {
+    max-width: none;
     width: 100%;
-    min-height: 100%;
-    border: 0;
-    border-radius: 0;
-    background-color: #131315;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 
-    .modal-title-container {
+    .modal-header {
+      display: block;
       text-align: center;
-      margin-top: -92px;
+      padding: 0;
+      margin-bottom: 30px;
+      border: 0;
 
-      .modal-title {
+      button.close {
         display: inline-block;
-        padding: 20px;
-        font-weight: bold;
-        background: rgb(19, 19, 21);
-        margin-top: 0.5rem;
+        float: none;
+        text-shadow: none;
+        border: 1px solid rgb(50, 43, 34);
+        border-top: 0;
+        padding: 25px;
+        margin-top: 0;
       }
     }
 
-    .modal-body {
-      border: 1px solid rgb(68, 59, 41);
-      margin: 50px 30px 30px 30px;
-      padding: 30px 0 15px 0;
+    .modal-content {
+      width: 100%;
+      min-height: 100%;
+      border: 0;
+      border-radius: 0;
+      background-color: #131315;
+
+      .modal-title-container {
+        text-align: center;
+        margin-top: -92px;
+
+        .modal-title {
+          display: inline-block;
+          padding: 20px;
+          font-weight: bold;
+          background: rgb(19, 19, 21);
+          margin-top: 0.5rem;
+        }
+      }
+
+      .modal-body {
+        border: 1px solid rgb(68, 59, 41);
+        margin: 50px 30px 30px 30px;
+        padding: 30px 0 15px 0;
+      }
     }
   }
 }
